# mcmodsmgr

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: cli.rs  commands.rs  lockfile.rs  main.rs  util.rs
src/api/: curseforge.rs  curseforge_types.rs
src/tests/: util.rs
src/tests/api/: curseforge.rs
