[package]
name = "mcmodsmgr"
version = "0.0.1"
edition = "2018"
description = "Manage Minecraft mods registered at curseforge.com"
licence = "MIT"

[dependencies]
tokio = { version = "~1.12.0", features = ["full"] }
reqwest = "~0.11.4"
serde = { version = "^1.0.101", features = ["derive"] }
serde_json = "1.0"
prettytable-rs = "^0.8"
clap = "3.0.0-beta.4"

[[bin]]
name = "mcmodsmgr"
path = "src/main.rs"

