[package]
name = "mcmodsmgr"
version = "0.0.3"
edition = "2018"
description = "Manage Minecraft mods registered at curseforge.com"
license = "MIT"
repository = "https://github.com/shosatojp/mcmodsmgr"

[dependencies]
tokio = { version = "^1.12.0", features = ["full"] }
reqwest = "^0.11.4"
serde = { version = "^1.0.101", features = ["derive"] }
serde_json = "1.0"
prettytable-rs = "^0.8"
clap = "^2.33.3"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

[[bin]]
name = "mcmodsmgr"
path = "src/main.rs"

